--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div class="nav container">
-        <a href="#" class="logo">Gaming</a>
+        <a href="#" class="logo">Justin's Gaming Site</a>
         <i class="bx bxs-shopping-bag" id="cart-icon">Cart</i>
         <!-- Cart -->
         <div class="cart">
@@ -29,6 +29,7 @@
           </div>
           <!-- Buy Button -->
           <button type="button" class="btn-buy">Buy Now</button>
+          <button type="button" class="empty-cart">Empty Cart</button>
           <!-- Cart Close -->
           <i class="bx bx-x" id="close-cart"></i>
         </div>
@@ -40,58 +41,88 @@
       <div class="shop-content">
         <!-- Box 1 -->
         <div class="product-box">
-          <img src="" alt="" class="product-img" />
-          <h2 class="product-title">Product 1</h2>
-          <span class="price">$25</span>
+          <img src="images/ps5.jpg" alt="" class="product-img" />
+          <h2 class="product-title">Playstation 5</h2>
+          <span class="price">$499.99</span>
           <i class="bx bx-plus-medical add-cart"></i>
         </div>
         <!-- Box 2 -->
         <div class="product-box">
-          <img src="" alt="" class="product-img" />
-          <h2 class="product-title">Product 2</h2>
-          <span class="price">$25</span>
+          <img src="images/xbox.jpg" alt="" class="product-img" />
+          <h2 class="product-title">Xbox Series X</h2>
+          <span class="price">$499.99</span>
           <i class="bx bx-plus-medical add-cart"></i>
         </div>
         <!-- Box 3 -->
         <div class="product-box">
-          <img src="" alt="" class="product-img" />
-          <h2 class="product-title">Product 3</h2>
-          <span class="price">$25</span>
+          <img src="images/nintendo.jpg" alt="" class="product-img" />
+          <h2 class="product-title">Nintendo Switch</h2>
+          <span class="price">$289.99</span>
           <i class="bx bx-plus-medical add-cart"></i>
         </div>
         <!-- Box 4 -->
         <div class="product-box">
-          <img src="" alt="" class="product-img" />
-          <h2 class="product-title">Product 4</h2>
-          <span class="price">$25</span>
+          <img src="images/ps5-controller.jpg" alt="" class="product-img" />
+          <h2 class="product-title">PS5 Dualsense Controller Grey</h2>
+          <span class="price">$71.73</span>
           <i class="bx bx-plus-medical add-cart"></i>
         </div>
         <!-- Box 5 -->
         <div class="product-box">
-          <img src="" alt="" class="product-img" />
-          <h2 class="product-title">Product 5</h2>
-          <span class="price">$25</span>
+          <img src="images/xbox-controller.jpg" alt="" class="product-img" />
+          <h2 class="product-title">Xbox Core Wireless Controller - Red</h2>
+          <span class="price">$61.63</span>
           <i class="bx bx-plus-medical add-cart"></i>
         </div>
         <!-- Box 6 -->
         <div class="product-box">
-          <img src="" alt="" class="product-img" />
-          <h2 class="product-title">Product 6</h2>
-          <span class="price">$25</span>
+          <img src="images/nintendo-joycons.jpg" alt="" class="product-img" />
+          <h2 class="product-title">Nintendo Switch Joycons</h2>
+          <span class="price">$31.99</span>
           <i class="bx bx-plus-medical add-cart"></i>
         </div>
         <!-- Box 7 -->
         <div class="product-box">
-          <img src="" alt="" class="product-img" />
-          <h2 class="product-title">Product 7</h2>
-          <span class="price">$25</span>
+          <img src="images/mario-maker.jpg" alt="" class="product-img" />
+          <h2 class="product-title">Super Mario Maker 2</h2>
+          <span class="price">$47.50</span>
           <i class="bx bx-plus-medical add-cart"></i>
         </div>
         <!-- Box 8 -->
         <div class="product-box">
-          <img src="" alt="" class="product-img" />
-          <h2 class="product-title">Product 8</h2>
-          <span class="price">$25</span>
+          <img src="images/spiderman.jpg" alt="" class="product-img" />
+          <h2 class="product-title">Marvel Spider-Man 2</h2>
+          <span class="price">$69.99</span>
+          <i class="bx bx-plus-medical add-cart"></i>
+        </div>
+        <!-- Box 9 -->
+        <div class="product-box">
+          <img src="images/halo.jpg" alt="" class="product-img" />
+          <h2 class="product-title">Halo Infinite</h2>
+          <span class="price">$27.80</span>
+          <i class="bx bx-plus-medical add-cart"></i>
+        </div>
+        <!-- Box 10 -->
+        <div class="product-box">
+          <img src="images/mortal.jpg" alt="" class="product-img" />
+          <h2 class="product-title">Mortal Kombat 1</h2>
+          <span class="price">$58.99</span>
+          <i class="bx bx-plus-medical add-cart"></i>
+        </div>
+        <!-- Box 11 -->
+        <div class="product-box">
+          <img src="images/zelda.jpg" alt="" class="product-img" />
+          <h2 class="product-title">
+            The Legend of Zelda: Tears of the Kingdom
+          </h2>
+          <span class="price">$55.90</span>
+          <i class="bx bx-plus-medical add-cart"></i>
+        </div>
+        <!-- Box 12 -->
+        <div class="product-box">
+          <img src="images/madden.jpg" alt="" class="product-img" />
+          <h2 class="product-title">Madden 24</h2>
+          <span class="price">$39.99</span>
           <i class="bx bx-plus-medical add-cart"></i>
         </div>
       </div>
