--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
       </div>
     </section>
 
+    <footer>
+      <p>Copyright 2024 Justin Maddox</p>
+    </footer>
+
     <!-- Linking My JS page-->
     <script src="script.js"></script>
   </body>
